plugins
{
    id 'java'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.nikolai'
version = '3.0.0-SNAPSHOT'

repositories
{
    mavenCentral()
    maven { url 'https://repo.papermc.io/repository/maven-public/' }
}

dependencies
{
    compileOnly 'io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT'
}

java
{
    toolchain
    {
        languageVersion.set(JavaLanguageVersion.of(23))
    }
}

tasks.withType(JavaCompile)
{
    options.encoding = 'UTF-8'
}

artifacts
{
    archives shadowJar
}

shadowJar
{
    archiveFileName = "${rootProject.name}-${version}.jar"
    destinationDirectory.set(new File("OutPut"))
}